--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
             <h1 class="header-title-1">拙美智装一站加梯</h1>
             <h2 class="header-title-2">加装电梯费用分摊计算器</h2>
             <!-- 新增1：可拨打电话的按钮 -->
-            <a href="tel:13800138000" class="phone-btn">
+            <a href="tel:15716249629" class="phone-btn">
                 点击拨打咨询电话
             </a>
         </div>
@@ -149,7 +149,7 @@
 
     <!-- 新增：计算规则说明文字（位于结果与二维码之间） -->
         <div class="rule-desc">
-            根据谁受益，谁出资的原则，按楼层受益大小出资。具体依据少走的多少台阶，就出多少钱来计算系数。比如三楼居民少走了2层楼梯，系数就设为2。每一户的系数除以总系数的和，就是每户需要分摊的比例。
+            根据谁受益，谁出资的原则，按楼层受益大小出资。具体依据少走多少台阶，就多出多少钱来计算系数。比如三楼居民少走了2层楼梯，系数就设为2，四楼则为3。每一户的系数除以总系数的和，就是每户需要分摊的比例。
         </div>
 
     <!-- 新增：二维码移至页面最底部 -->
